--- a/.emacs.d/init-config.org
+++ b/.emacs.d/init-config.org
@@ -22,7 +22,13 @@ changes to be saved
 ** DONE [TEMP] 14. Non eletric tab. Only inserts tabs
 ** DONE 15. Make j at bottom of screen or k at top of screen not move
 up half a page at a time
-** TODO 16. Fix * and # just doing w and not like W
+** DONE 16. Fix * and # just doing w and not like W
+You can use the 3 function calls below to test. Place the cursor on the first
+test_name() and press *. It should go to the second test_name()
+
+test_name()
+test_bait()
+test_name()
 ** TODO 17. Fix terminal to be bash and make shortcut for opening it
 ** TODO 18. Block style cursor in insert mode?
 ** TODO 19. Consider learning and installing avy?
@@ -54,22 +60,12 @@ up half a page at a time
 ** TODO 33. Find file doesn't prompt if file doesn't exist
 ** TODO 34. company popup hides line numbers
 ** DONE 35. TODO, FIXME, and BUGME are highlighted in comments
+** TODO 36. '', '', '' works
 ** Notes:
 C-h k <key series> to get documentation/name of function executed to key series
 zM to close all folds works wonders in markdown mode
 zR to open all folds
 
-* Evil scrolling stuff that must be done super duper early apparently
-#+BEGIN_SRC emacs-lisp
-;; God damn evil
-(setq evil-search-module 'evil-search)
-(setq evil-want-C-u-scroll t)
-;; (define-key evil-normal-state-map "*" 'evil-next-visual-line)
-;; (define-key evil-normal-state-map "#" 'evil-previous-visual-line)
-;; test_name()
-;; test_bait()
-;; test_name()
-#+END_SRC
 * Disabled Defaults
 #+BEGIN_SRC emacs-lisp
 ;; Remove various bars from top of screen
@@ -93,11 +89,17 @@ zR to open all folds
     #+END_SRC
 *** evil
 #+BEGIN_SRC emacs-lisp
-    ;; For evil mode >:^]
-    (use-package evil
-      :ensure t
-      :config
-      (evil-mode t))
+;; For evil mode >:^]
+(use-package evil
+  :demand
+  :init
+  (setq evil-want-C-u-scroll t) ; Unbind <C-u> for evil mode's use
+  (setq evil-want-C-i-jump nil)
+  :config
+  (evil-mode t)
+  (setq evil-split-window-below t
+        evil-vsplit-window-right t)
+  (setq-default evil-symbol-word-search t))
 #+END_SRC
 *** evil-surround
 #+BEGIN_SRC emacs-lisp
