--- a/.emacs.d/init-config.org
+++ b/.emacs.d/init-config.org
@@ -98,13 +98,28 @@ zR to open all folds
 (use-package evil
   :demand
   :init
-  (setq evil-want-C-u-scroll t) ; Unbind <C-u> for evil mode's use
+  ;; Add support for native vim C-u when editing
+  (setq evil-want-C-u-scroll t)
   (setq evil-want-C-i-jump nil)
+  ;; Add support for vim 'gn' motions when editing
+  (setq evil-search-module (quote evil-search))
   :config
   (evil-mode t)
   (setq evil-split-window-below t
         evil-vsplit-window-right t)
+  ;; Fix *, # motions to go by WORD and not word like in vim
   (setq-default evil-symbol-word-search t))
+#+END_SRC
+*** evil-commentary
+#+BEGIN_SRC emacs-lisp
+    ;; For commenting goodness I have yet to learn
+    ;; comment out the next [num] lines: [num]gcc
+    ;; comment out visually selected area: gc
+    (use-package evil-commentary
+      :ensure t
+      :config
+      ;; Enable evil-commentary
+      (evil-commentary-mode))
 #+END_SRC
 *** evil-surround
 #+BEGIN_SRC emacs-lisp
