--- a/.emacs.d/init-config.org
+++ b/.emacs.d/init-config.org
@@ -70,6 +70,22 @@ Highlights them wherever they can be found
 C-h k <key series> to get documentation/name of function executed to key series
 zM to close all folds works wonders in markdown mode
 zR to open all folds
+*** magit
+Launch with magit-status
+M-n  next section
+M-p  previous section
+n    section forward no sibling?
+s    stage
+k    for discard (unsure if remove modification or rm file)
+i    add to gitignore
+tab  git diff of file
+enter on a git diff allows you to edit the file
+g    refresh magit interface
+c    begin commit
+cc   write commit message
+C-c C-c commit has now been committed
+P    git push
+s    on a git diff hunk to stage only that hunk
 
 * Disabled Defaults
 #+BEGIN_SRC emacs-lisp
@@ -141,6 +157,20 @@ zR to open all folds
   (define-key evil-normal-state-map (kbd "C-a") 'evil-numbers/inc-at-pt)
   (define-key evil-normal-state-map (kbd "C--") 'evil-numbers/dec-at-pt))
 #+END_SRC
+*** magit
+#+BEGIN_SRC emacs-lisp
+;; For juicy juicy git version control
+(use-package magit
+  :ensure t)
+#+END_SRC
+
+*** evil-magit
+#+BEGIN_SRC emacs-lisp
+;; For vim like juicy juicy version control
+(use-package evil-magit
+  :ensure t)
+#+END_SRC
+
 *** flycheck
 #+BEGIN_SRC emacs-lisp
     (use-package flycheck
