--- a/.emacs.d/init-config.org
+++ b/.emacs.d/init-config.org
@@ -1,4 +1,4 @@
-* Todo list [13/38]:
+* Todo list [15/40]:
 ** TODO [TEMP] 1. Get line numbers padded and right justified
  Solution is really laggy
 ** TODO 2. Prevent mouse from affect vim modes (Normal, Visual, Insert)
@@ -66,6 +66,7 @@ Highlights them wherever they can be found
 Highlights them wherever they can be found
 ** TODO 37. '', '', '' works
 ** TODO 38. Fix issue with org src blocks not fontifying
+** DONE 39. Fix word in evil treating "_" as a word delimiter
 ** Notes:
 C-h k <key series> to get documentation/name of function executed to key series
 zM to close all folds works wonders in markdown mode
@@ -120,6 +121,8 @@ s    on a git diff hunk to stage only that hunk
   ;; Add support for vim 'gn' motions when editing
   (setq evil-search-module (quote evil-search))
   :config
+  ;; Make 'word' function like in vim treating "_" as a word constituent
+  (modify-syntax-entry ?_ "w")
   (evil-mode t)
   (setq evil-split-window-below t
         evil-vsplit-window-right t)
