--- a/.emacs.d/init-config.org
+++ b/.emacs.d/init-config.org
@@ -1,4 +1,4 @@
-* Todo list [15/40]:
+* Todo list [15/44]:
 ** TODO [TEMP] 1. Get line numbers padded and right justified
  Solution is really laggy
 ** TODO 2. Prevent mouse from affect vim modes (Normal, Visual, Insert)
@@ -67,7 +67,11 @@ Highlights them wherever they can be found
 ** TODO 37. '', '', '' works
 ** TODO 38. Fix issue with org src blocks not fontifying
 ** DONE 39. Fix word in evil treating "_" as a word delimiter
-** TODO 40. / doesn't support \s or regexes??
+** TODO 40. conf file format highlighting
+** TODO 41. Xresource file format highlighting
+** TODO 42. Open emacs in a non-floating mode
+** TODO 43. Add line numbers even when the file is empty
+** TODO 44. hitting enter in org mode bullet points doesn't require C-w to get them right
 ** Notes:
 C-h k <key series> to get documentation/name of function executed to key series
 zM to close all folds works wonders in markdown mode
@@ -125,7 +129,9 @@ s    on a git diff hunk to stage only that hunk
   (setq evil-ex-search-case 'sensitive)
   :config
   ;; Make 'word' function like in vim treating "_" as a word constituent
-  (modify-syntax-entry ?_ "w")
+  (add-hook 'prog-mode-hook
+    (lambda ()
+      (modify-syntax-entry ?_ "w")))
   (evil-mode t)
   (setq evil-split-window-below t
         evil-vsplit-window-right t)
@@ -341,9 +347,9 @@ s    on a git diff hunk to stage only that hunk
 (add-hook 'prog-mode-hook
   (lambda ()
     (font-lock-add-keywords nil
-      '(("\\(FIXME\\|TODO\\|BUG\\)" 1 font-lock-warning-face t)))
+      '(("\\(FIXME:\\|TODO:\\|BUG:\\)" 1 font-lock-warning-face t)))
     (font-lock-add-keywords nil
-      '(("\\(CHECK\\|TEST\\)" 1 font-lock-string-face t)))))
+      '(("\\(CHECK:\\|TEST:\\)" 1 font-lock-string-face t)))))
 #+END_SRC
 * Indentation
 #+BEGIN_SRC emacs-lisp
